Closed Bug 1100243 Opened 10 years ago Closed 10 years ago

[Text selection] Fix wrong log in SelectionCarets::SetEndFrameVisibility()

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: TYLin, Assigned: TYLin)

Details

Attachments

(1 file)

void
SelectionCarets::SetEndFrameVisibility(bool aVisible)
{
  mEndCaretVisible = aVisible;
  SELECTIONCARETS_LOG("Set end frame visibility %s",
                      (mStartCaretVisible ? "shown" : "hidden"));

  // Omit ...
}

Should be mEndCaretVisible in [1].

http://hg.mozilla.org/mozilla-central/annotate/a52bf59965a0/layout/base/SelectionCarets.cpp#l328
Attachment #8523704 - Flags: review?(mtseng) → review+
https://hg.mozilla.org/mozilla-central/rev/076b942c1a6e
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.