Bug 1100243 - Fix wrong log in SelectionCarets::SetEndFrameVisibility(). r=mtseng